# generic-data-surgery

./: .travis.yml  CHANGELOG.md  README.md  generic-data-surgery.cabal  stack-default.yaml
.github/workflows/: ci.yml
examples/: example-aeson.hs  example-checksum.hs  gds-examples.cabal  generic-free-monad.hs
src/Generic/Data/: Surgery.hs
src/Generic/Data/Surgery/: Internal.hs
test/: surgery.hs  synthetic.hs
